--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 
   <div class="bestseller-saleoff">
-    <div class="bestseller-content">
+    <div class="bestseller-head">
       <h1>BEST SELLER</h1>
       <div class="bestseller-noidung">
         <div class="bestseller">
